--- a/programacion.html
+++ b/programacion.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Plantilla reutilizable para el Proyecto Final: Radio Nueva Criatura 88.1 FM.">
-  <title>Radio Nueva Criatura 88.1 FM | Template</title>
+  <title>Radio Nueva Criatura 88.1 FM | Programación</title>
   <link rel="stylesheet" href="SiteStyle/global.css">
 </head>
 
@@ -29,8 +29,8 @@
       <nav class="primary-nav" aria-label="Navegación principal">
   <ul>
     <li><a href="index.html" >Inicio</a></li>
-    <li><a href="sobre-nosotros.html" aria-current="page">Sobre Nosotros</a></li>
-    <li><a href="programacion.html">Programación</a></li>
+    <li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
+    <li><a href="programacion.html" aria-current="page">Programación</a></li>
     <li><a href="contacto.html">Contacto</a></li>
   </ul>
 </nav>
@@ -49,49 +49,77 @@
   <div class="wrapper layout">
 
     <main id="contenido">
-      <h1><!-- Cambia: Título Principal --></h1>
 
-      <section class="clearfix">
-        <h2><!-- Tópico #1 --></h2>
-        <img class="float-right" src="SiteImage/estudio.jpg" alt="Imagen relacionada (puedes cambiarla)">
-        <p><!-- Párrafo --></p>
-        <p><!-- Párrafo --></p>
-      </section>
+<section class="card" aria-label="Programación">
+  <h1>Programación</h1>
+  <p>Una programación diseñada para edificar tu alma, fortalecer tu fe y acompañarte en cada momento del día.</p>
 
-      <section>
-        <h2><!-- Tópico #2 --></h2>
-        <p><!-- Aquí puedes usar listas, tablas, etc. --></p>
+  <table class="schedule" aria-label="Tabla de programación">
+    <caption>Programación semanal (ejemplo)</caption>
+    <thead>
+      <tr>
+        <th>Día</th>
+        <th>Horario</th>
+        <th>Programa</th>
+        <th>Descripción</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Lunes</td>
+        <td>7:00 AM - 9:00 AM</td>
+        <td>Alabanza de la Mañana</td>
+        <td>Música cristiana y oración para comenzar el día.</td>
+      </tr>
+      <tr>
+        <td>Martes</td>
+        <td>8:00 PM - 9:00 PM</td>
+        <td>Palabra que Edifica</td>
+        <td>Reflexión bíblica y mensaje de fe.</td>
+      </tr>
+      <tr>
+        <td>Miércoles</td>
+        <td>6:00 PM - 7:30 PM</td>
+        <td>Intercesión en Vivo</td>
+        <td>Tiempo de oración por la familia y la comunidad.</td>
+      </tr>
+      <tr>
+        <td>Jueves</td>
+        <td>9:00 PM - 10:00 PM</td>
+        <td>Testimonios y Victoria</td>
+        <td>Historias reales y palabra de ánimo.</td>
+      </tr>
+      <tr>
+        <td>Viernes</td>
+        <td>5:00 PM - 7:00 PM</td>
+        <td>Noche de Adoración</td>
+        <td>Alabanza, adoración y mensajes edificantes.</td>
+      </tr>
+      <tr>
+        <td>Sábado</td>
+        <td>10:00 AM - 12:00 PM</td>
+        <td>Juventud con Propósito</td>
+        <td>Contenido para jóvenes: fe, identidad y esperanza.</td>
+      </tr>
+      <tr>
+        <td>Domingo</td>
+        <td>5:00 PM - 6:30 PM</td>
+        <td>Culto / Servicio Especial</td>
+        <td>Transmisión especial y palabra para la semana.</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
 
-        <table>
-          <caption>Ejemplo de Tabla</caption>
-          <thead>
-            <tr>
-              <th scope="col">Columna 1</th>
-              <th scope="col">Columna 2</th>
-              <th scope="col">Columna 3</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Dato</td>
-              <td>Dato</td>
-              <td>Dato</td>
-            </tr>
-          </tbody>
-        </table>
+<section class="card" aria-label="Versículo de ánimo">
+  <h2>Versículo de ánimo</h2>
+  <p>
+    <strong>“Jehová es mi pastor; nada me faltará.”</strong><br>
+    <em>Salmo 23:1</em>
+  </p>
+</section>
 
-        <p>
-          Link externo relacionado:
-          <a href="https://radionuevacriatura.net/" target="_blank" rel="noopener">radionuevacriatura.net</a>
-        </p>
-      </section>
-
-      <figure>
-        <img src="SiteImage/logo.png" alt="Logo oficial de Radio Nueva Criatura 88.1 FM">
-        <figcaption><!-- Descripción de la imagen --></figcaption>
-      </figure>
-
-    </main>
+</main>
 
     <aside aria-label="Barra lateral">
   <h2>Versículo del día</h2>
