--- a/contacto.html
+++ b/contacto.html
@@ -3,22 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Sitio oficial de Radio Nueva Criatura 88.1 FM: alabanza, Palabra y mensajes edificantes 24/7.">
-  <title>Radio Nueva Criatura 88.1 FM | Inicio</title>
-
-  <!-- Vinculando el archivo CSS separado (requisito del laboratorio) -->
+  <meta name="description" content="Plantilla reutilizable para el Proyecto Final: Radio Nueva Criatura 88.1 FM.">
+  <title>Radio Nueva Criatura 88.1 FM | Contacto</title>
   <link rel="stylesheet" href="SiteStyle/global.css">
 </head>
 
 <body>
-  <!-- Comentario: Enlace para accesibilidad -->
+  <!-- PLANTILLA: Copia esta página y cambia el contenido según la sección (Sobre Nosotros / Programación / Contacto) -->
   <a class="skip-link" href="#contenido">Saltar al contenido</a>
 
   <header class="site-header">
     <div class="wrapper">
 
       <div class="logo-area">
-        <!-- Requisito: Elemento <div> para el logo -->
         <div id="logo">
           <img src="SiteImage/logo.png" alt="Logo de Radio Nueva Criatura 88.1 FM">
           <div>
@@ -26,25 +23,56 @@
             <p class="brand-sub">“La Que Guarda Tu Corazón”</p>
           </div>
         </div>
-
-        <span class="badge">Plantilla (Laboratorio #3)</span>
+        <span class="badge">Template</span>
       </div>
 
-      <!-- Requisito: Barra de navegación para cambiar de página -->
       <nav class="primary-nav" aria-label="Navegación principal">
   <ul>
     <li><a href="index.html" >Inicio</a></li>
     <li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
     <li><a href="programacion.html">Programación</a></li>
-    <li><a href="contacto.html">Contacto</a></li>
+    <li><a href="contacto.html" aria-current="page">Contacto</a></li>
   </ul>
 </nav>
 
-      <!-- Requisito: Banner superior con gráfico y texto -->
-      
-    </main>
+      <section class="banner" aria-label="Banner superior">
+        <img src="SiteImage/banner.jpg" alt="Banner principal de Radio Nueva Criatura 88.1 FM">
+        <div class="banner-text">
+          <h2><!-- Cambia este texto según la página -->Título del Banner</h2>
+          <p><!-- Cambia este texto según la página -->Frase corta / mensaje bíblico / enfoque de la sección.</p>
+        </div>
+      </section>
 
-    <!-- Requisito: Barra lateral (sidebar) -->
+    </div>
+  </header>
+
+  <div class="wrapper layout">
+
+    <main id="contenido">
+
+<section class="card" aria-label="Contacto">
+  <h1>Contacto</h1>
+  <p>Si deseas comunicarte con nosotros, aquí te dejamos la información oficial:</p>
+  <p class="small">
+    <strong>Email:</strong> <a href="mailto:info@radionuevacriatura.net">info@radionuevacriatura.net</a><br>
+    <strong>Ubicación:</strong> Bronx, NY
+  </p>
+
+  <div class="notice">
+    <strong>Petición de oración:</strong> si tienes una petición, escríbenos y estaremos orando contigo.
+  </div>
+
+  <section aria-label="Versículo para la familia" class="card">
+    <h2>Versículo para la familia</h2>
+    <p>
+      <strong>“Y mi Dios, pues, suplirá todo lo que os falta conforme a sus riquezas en gloria en Cristo Jesús.”</strong><br>
+      <em>Filipenses 4:19</em>
+    </p>
+  </section>
+</section>
+
+</main>
+
     <aside aria-label="Barra lateral">
   <h2>Versículo del día</h2>
   <p class="small">
@@ -71,18 +99,12 @@
 
   </div>
 
-  <!-- Requisito: Pie de página (footer) -->
   <footer class="wrapper">
     <p class="small">
-      © <span id="year"></span> Radio Nueva Criatura 88.1 FM. Todos los derechos reservados.<br>
-      “La Que Guarda Tu Corazón” — Gracias por apoyar este ministerio.
-    </p>
-    <p class="small">
-      Pequeña broma santa: aquí no se cae el sistema… ¡aquí lo levantamos en oración! 😄
+      © <span id="year"></span> Radio Nueva Criatura 88.1 FM. Todos los derechos reservados.
     </p>
   </footer>
 
-  <!-- Comentario: Script mínimo solo para el año (no es requerido, pero no afecta) -->
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
